--- a/src/app/layout/footer/footer.component.html
+++ b/src/app/layout/footer/footer.component.html
@@ -1,10 +1,17 @@
 <br>
-<p class="px-4"> ...  <br> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+<p class="px-4"> <br> Global connectivity is fast changing the way business is done. The ability act upon investment opportunities in an integrated, flexible, connected and dynamic manner with the required infrastructural resources in place is what is driving Talis Holdings Group’s success and growth.
+
+
+	<br class="spacer" >
+	<br class="spacer" >
+	
+	Through its investment in diverse and strategically aligned subsidiaries in the African and global economy; property, ICT, finance, media, agriculture and infrastructure development, <b>Talis Holdings Group is able to turn key diverse projects and investments efficiently and timeously.</b>
+	
+
+	<br class="spacer" >
+	<br class="spacer" >
+
+	<b>Talis Holdings Group</b> follows completely new rules of business – the pace and scope of technology change no longer allows for traditional planning conventions. Our vision is futuristic, and we function according to a highly flexible business model. This enables us to rapidly adapt to change without compromising sustainability and long-term objectives.</p>
 <br>
 <footer class="section-footer border-top">
 	<div class="container">
@@ -12,15 +19,20 @@ proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
 			<div class="row">
 				<aside class="col-md-4">
 					<article class="mr-3">
-						<img src="../../../assets/images/logo1.png" class="logo-footer">
-						<p class="mt-3">Some short text about company like You might remember the Dell computer commercials in which a youth reports this exciting news to his friends.</p>
-						<div>
+						<img src="../../../assets/images/talis-holdings-logo-footer-5.png" class="logo-footer">
+						<p class="mt-3">Talis Holdings Group consists of four companies within the group they contribute to the efficient delivery of shared business goals.</p>
+						<!-- <div>
 						    <a class="btn btn-icon btn-light" title="Facebook" target="_blank" href="#"><i class="fab fa-facebook-f"></i></a>
 						    <a class="btn btn-icon btn-light" title="Instagram" target="_blank" href="#"><i class="fab fa-instagram"></i></a>
 						    <a class="btn btn-icon btn-light" title="Youtube" target="_blank" href="#"><i class="fab fa-youtube"></i></a>
 						    <a class="btn btn-icon btn-light" title="Twitter" target="_blank" href="#"><i class="fab fa-twitter"></i></a>
-						</div>
+						</div> -->
 					</article>
+				</aside>
+				<aside class="col-sm-4  col-md-4">
+					<!-- <h6 class="title">Our app</h6> -->
+					<img src="../../../assets/images/talis-holdings-group-logos-3.png" class="img-group" width="100%" height="160px">
+					<!-- <p class="mt-6">Talis Holdings Group consists of four companies within the group they contribute to the efficient delivery of shared business goals.</p> -->
 				</aside>
 				<aside class="col-sm-3 col-md-2">
 					<h6 class="title">About</h6>
@@ -40,26 +52,13 @@ proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
 						<li> <a href="#">Open dispute</a></li>
 					</ul>
 				</aside>
-				<aside class="col-sm-3  col-md-2">
-					<h6 class="title">For users</h6>
-					<ul class="list-unstyled">
-						<li> <a href="#"> User Login </a></li>
-						<li> <a href="#"> User register </a></li>
-						<li> <a href="#"> Account Setting </a></li>
-						<li> <a href="#"> My Orders </a></li>
-						<li> <a href="#"> My Wishlist </a></li>
-					</ul>
-				</aside>
-				<aside class="col-sm-2  col-md-2">
-					<h6 class="title">Our app</h6>
-					<a href="#" class="d-block mb-2"><img src="../../../assets/images/appstore.png" height="40"></a>
-					<a href="#" class="d-block mb-2"><img src="../../../assets/images/playmarket.png" height="40"></a>
-				</aside>
+				
+				<!--  -->
 			</div> <!-- row.// -->
 		</section>	<!-- footer-top.// -->
 
 		<section class="footer-copyright border-top">
-				<p class="float-left text-muted"> © {{year}} Company  All rights resetved </p>
+				<p class="float-left text-muted">Copyrights Talis Holdings  © {{year}}  All rights resetved </p>
 				<p target="_blank" class="float-right text-muted">
 					<a href="#">Privacy &amp; Cookies</a> &nbsp;   &nbsp;
 					<a href="#">Accessibility</a>
