--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -6,26 +6,20 @@
     </ol>
     <div class="carousel-inner">
 		<div class="carousel-item active">
-			<img class="d-block w-100" src="../../../assets/images/driving-school07.jpg" alt="First slide">
-			<div class="carousel-caption d-none d-md-block">
-				<div class="row">
-					<div class="col-sm-4">
-						<a routerLink="" class="btn btn-outline-light btn-sm">Book a lesson</a>
-					</div>
-					<div class="col-sm-4">
-						<!--  -->
-					</div>
-					<div class="col-sm-4">
-						<a routerLink="" class="btn btn-outline-light btn-sm">Book a lesson</a>
+			<img class="d-block w-100" src="../../../assets/images/talis_holdings_business_header.jpg" alt="First slide">
+			<div class="carousel-caption d-none d-md-block text-left">
+				<div>
+					<div>
+						<h4>Talis Holding Group</h4>
 					</div>
 				</div>
 			</div>
 		</div>
 		<div class="carousel-item">
-			<img class="d-block w-100" src="../../../assets/images/driving-school08.jpg" alt="Second slide">
+			<img class="d-block w-100" src="../../../assets/images/talis_holdings_business_header1.jpg" alt="Second slide">
 		</div>
 		<div class="carousel-item">
-			<img class="d-block w-100" src="../../../assets/images/driving-school09.jpg" alt="Third slide">
+			<img class="d-block w-100" src="../../../assets/images/talis_holdings_business_header.jpg" alt="Third slide">
 		</div>
     </div>
     <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
