--- a/src/app/layout/navbar/navbar.component.html
+++ b/src/app/layout/navbar/navbar.component.html
@@ -1,14 +1,14 @@
-<nav class="navbar fixed-top navbar-expand-lg navbar-dark bg-dark">
+<nav class="navbar fixed-top navbar-expand-lg ">
 
-    <a class="navbar-brand" href="#"><img class="logo" src="../../../assets/images/logo1.png"></a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
+    <a class="navbar-brand" href="#"><img class="logo" src="../../../assets/images/talis-holdings-logo.jpg"></a>
+    <button class="navbar-toggler nav-tog" type="button" data-toggle="collapse" data-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
 
     <div class="collapse navbar-collapse" id="navbarText">
         <ul class="navbar-nav mr-md-auto">
             <div class="btn-spacer"></div>
-            <li *ngIf="isLoggedIn" class="nav-item dropdown">
+            <!-- <li *ngIf="isLoggedIn" class="nav-item dropdown">
                 <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown" aria-expanded="false"> Bookings </a>
                 <ul class="dropdown-menu dropdown-menu-sm-left">
 
@@ -20,56 +20,63 @@
                     <div role="separator" class="dropdown-divider"></div>
 
                     <li>
-                        <a class="dropdown-item a-link" href="#">Book a driving lesson</a>
+                        <a href="#bookTestModal"  class="dropdown-item a-link" data-toggle="modal"> Book a learners test</a>
                     </li>
 
                     <div role="separator" class="dropdown-divider"></div>
 
                     <li>
-                        <a class="dropdown-item a-link" href="#">Booking a Learner’s test</a>
+                        <a href="#bookDrivingModal"  class="dropdown-item a-link" data-toggle="modal"> Book a driving lesson </a>
                     </li>
 
                 </ul>
-            </li>
+            </li> -->
 
             <div class="btn-spacer"></div>
 
             <li >
-                <a routerLink="/our-prices" class="nav-link btn btn-dark btn-sm"> Our Prices </a>
+                <a routerLink="/" class="nav-link "> CSI </a>
             </li>
 
             <div class="btn-spacer"></div>
 
             <li>
-                <a routerLink="/contact-us" class="nav-link btn btn-dark btn-sm"> Contact Us </a>
+                <a routerLink="/" class="nav-link "> CONTACT </a>
             </li>
+
+            <div class="btn-spacer"></div>
+
+            <li class="nav-item">
+                <a routerLink="/" class="nav-link "> OUR BUSINESS </a>
+            </li>
+
         </ul>
 
         <ul class="navbar-nav">
             
             <li class="nav-item">
-                <a routerLink="/our-services" class="nav-link btn btn-dark btn-sm"> Our Services </a>
+                <a routerLink="/" class="nav-link "> ABOUT  </a>
             </li>
 
             <div class="btn-spacer"></div>
 
             <li class="nav-item">
-                <a routerLink="/about-us" class="nav-link btn btn-dark btn-sm"> About US </a>
+                <a routerLink="/a" class="nav-link "> ABOUT COVID 19 </a>
+            </li>
+
+            <div class="btn-spacer"></div>
+            
+            <!-- <li class="nav-item" *ngIf="!isLoggedIn">
+                <a href="#myModal" class="nav-link " data-toggle="modal"> Login </a>
             </li>
 
             <div class="btn-spacer"></div>
             
             <li class="nav-item" *ngIf="!isLoggedIn">
-                <a href="#myModal" class="nav-link btn btn-dark btn-sm" data-toggle="modal"> Login </a>
-            </li>
+                <a href="#registerModal" class="nav-link " data-toggle="modal"> Register </a>
+            </li> -->
 
-            <div class="btn-spacer"></div>
-            
-            <li class="nav-item" *ngIf="!isLoggedIn">
-                <a href="#registerModal" class="nav-link btn btn-dark btn-sm" data-toggle="modal"> Register </a>
-            </li>
-
-            <li class="nav-item dropdown" *ngIf="isLoggedIn">
+            <!-- <li class="nav-item dropdown" *ngIf="isLoggedIn">
                 <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown" aria-expanded="false"> Settings </a>
                 <ul class="dropdown-menu dropdown-menu-sm-right ">
 
@@ -101,7 +108,7 @@
                     </li>
 
                 </ul>
-            </li>
+            </li> -->
         </ul>
     </div>
 </nav>
