--- a/src/app/layout/footer/footer.component.html
+++ b/src/app/layout/footer/footer.component.html
@@ -1,18 +1,20 @@
-<br>
-<p class="px-4"> <br> Global connectivity is fast changing the way business is done. The ability act upon investment opportunities in an integrated, flexible, connected and dynamic manner with the required infrastructural resources in place is what is driving Talis Holdings Group’s success and growth.
+<div class="description">
+	<br>
+	<p class="px-4"> <br> Global connectivity is fast changing the way business is done. The ability act upon investment opportunities in an integrated, flexible, connected and dynamic manner with the required infrastructural resources in place is what is driving Talis Holdings Group’s success and growth.
 
 
-	<br class="spacer" >
-	<br class="spacer" >
-	
-	Through its investment in diverse and strategically aligned subsidiaries in the African and global economy; property, ICT, finance, media, agriculture and infrastructure development, <b>Talis Holdings Group is able to turn key diverse projects and investments efficiently and timeously.</b>
-	
+		<br class="spacer" >
+		<br class="spacer" >
+		
+		Through its investment in diverse and strategically aligned subsidiaries in the African and global economy; property, ICT, finance, media, agriculture and infrastructure development, <b>Talis Holdings Group is able to turn key diverse projects and investments efficiently and timeously.</b>
+		
 
-	<br class="spacer" >
-	<br class="spacer" >
+		<br class="spacer" >
+		<br class="spacer" >
 
-	<b>Talis Holdings Group</b> follows completely new rules of business – the pace and scope of technology change no longer allows for traditional planning conventions. Our vision is futuristic, and we function according to a highly flexible business model. This enables us to rapidly adapt to change without compromising sustainability and long-term objectives.</p>
-<br>
+		<b>Talis Holdings Group</b> follows completely new rules of business – the pace and scope of technology change no longer allows for traditional planning conventions. Our vision is futuristic, and we function according to a highly flexible business model. This enables us to rapidly adapt to change without compromising sustainability and long-term objectives.</p>
+	<br>
+</div>
 <footer class="section-footer border-top">
 	<div class="container">
 		<section class="footer-top padding-y">
