--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -7,13 +7,6 @@
     <div class="carousel-inner">
 		<div class="carousel-item active">
 			<img class="d-block w-100" src="../../../assets/images/talis_holdings_business_header.jpg" alt="First slide">
-			<div class="carousel-caption d-none d-md-block text-left">
-				<div>
-					<div>
-						<h4>Talis Holding Group</h4>
-					</div>
-				</div>
-			</div>
 		</div>
 		<div class="carousel-item">
 			<img class="d-block w-100" src="../../../assets/images/talis_holdings_business_header1.jpg" alt="Second slide">
@@ -21,6 +14,8 @@
 		<div class="carousel-item">
 			<img class="d-block w-100" src="../../../assets/images/talis_holdings_business_header.jpg" alt="Third slide">
 		</div>
+
+		
     </div>
     <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
 		<span class="carousel-control-prev-icon" aria-hidden="true"></span>
@@ -29,5 +24,40 @@
     <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
 		<span class="carousel-control-next-icon" aria-hidden="true"></span>
 		<span class="sr-only">Next</span>
-    </a>
+	</a>
+	
+	<div class="card-div">
+
+		<div class="row ">
+
+			<aside class="col-md-4 mt-5 offset-1">
+
+				<h6>Our Mission</h6>
+
+				<p class="mt-4 p">
+					Our mission is to inspire, grow and guide our 
+					assets into sustainable <br />  and efficient businesses and 
+					to enter new sectors where we can strategically unlock 
+					opportunities and where there exist synergies within the group.
+				</p>
+
+			</aside>
+
+			<div class="spacer"></div>
+
+			<aside class="col-md-4 mt-5 offset-1">
+
+				<h6>Our Vision</h6>
+
+				<p class="mt-4 p">
+					Our vision is to build an investment holding company that
+					 has a brand of excellence, sustainability and pushes the
+					  boundaries of creativity.
+				</p>
+
+			</aside>
+			
+		</div>
+
+	</div>
 </div>
