--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,18 +2,23 @@
     <app-navbar [userName]="userName"></app-navbar>
 
     
-    <app-home></app-home>
+    <!-- <app-home></app-home> -->
+
+    <div class="row spacer"></div>
     
-    <div class="container">
+    <!-- <div class="container">
         <app-login></app-login>
         <app-register></app-register>
-    </div>
+    </div> -->
 
     <div class="container col-sm-12 ">
-        <div class="row spacer">
+        <!-- <div class="row spacer"> -->
             <router-outlet></router-outlet>
-        </div>
+        <!-- </div> -->
     </div>
-    
+
+    <!-- <div class="row spacer"></div> -->
+
     <app-footer></app-footer>
 </div>
+
