--- a/src/app/layout/navbar/navbar.component.html
+++ b/src/app/layout/navbar/navbar.component.html
@@ -34,8 +34,8 @@
 
             <div class="btn-spacer"></div>
 
-            <li >
-                <a routerLink="/" class="nav-link "> CSI </a>
+            <li class="active">
+                <a routerLink="/csi" class="nav-link "> CSI </a>
             </li>
 
             <div class="btn-spacer"></div>
@@ -47,7 +47,7 @@
             <div class="btn-spacer"></div>
 
             <li class="nav-item">
-                <a routerLink="/" class="nav-link "> OUR BUSINESS </a>
+                <a routerLink="/our-business" class="nav-link "> OUR BUSINESS </a>
             </li>
 
         </ul>
